[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nlp_toolbox"
description = "Natural Language Processing Tools"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
                "trafilatura",
                "newspaper3k",
                "deep-translator",
                "nltk",
                "wordcloud",
                "spacy",
                "ebooklib",
                "pytesseract",
                "tesseract-ocr"
                ]