[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "nlp_toolbox"
description = "Natural Language Processing Tools"
version = "0.0.2"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["poetry-core",
                "trafilatura",
                "newspaper3k",
                "nltk",
                "wordcloud",
                "spacy",
                "ebooklib",
                "pytesseract",
                "tesseract-ocr"
                ]
[tool.poetry.dependencies]
python = "^3.7"
deep-translator = "^1.5.0"