[metadata]
name = ur_gadget
version = 0.0.4
author = Thinh Vu
author_email = mrthinh@live.com
description = Useful gadgets for your python projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thinh-vu/vnnews
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = find:
python_requires = >=3.7
